# PyMembrane

./: .buildinfo  .gitignore  README.md  contributors.html  genindex.html  index.html  installation.html  objects.inv  quickstart.html  search.html  searchindex.js  setup.py
.doctrees/: contributors.doctree  environment.pickle  index.doctree  installation.doctree  quickstart.doctree
.doctrees/cppapi/: classComputeForceClass.doctree  classComputeMesh.doctree  classComputeVertexBendingEnergy.doctree  classComputeVertexBendingHelfrichEnergy.doctree  classComputeVertexCauchyGreenEnergy.doctree  classComputeVertexConstantAreaTriangleEnergy.doctree  classComputeVertexDihedralEnergy.doctree  classComputeVertexFerromagneticEnergy.doctree  classComputeVertexHarmonicEnergy.doctree  classComputeVertexHarmonicSpinEnergy.doctree  classComputeVertexLimitEnergy.doctree  classComputeVertexLineTension.doctree  classComputeVertexSubstrateCylinderEnergy.doctree  classComputeVertexSubstrateEnergy.doctree  classComputeVertexSurfaceTension.doctree  classConstraintArea.doctree  classConstraintClass.doctree  classConstraintVolume.doctree  classDumperClass.doctree  classEvolverClass.doctree  classIntegratorBrownianMeshVertex.doctree  classIntegratorClass.doctree  classIntegratorVelocityVerletMeshVertex.doctree  (+653 more)
_static/: LICENSE  custom.css  documentation_options.js
cppapi/: classComputeForceClass.html  classComputeMesh.html  classComputeVertexBendingEnergy.html  classComputeVertexBendingHelfrichEnergy.html  classComputeVertexCauchyGreenEnergy.html  classComputeVertexConstantAreaTriangleEnergy.html  classComputeVertexDihedralEnergy.html  classComputeVertexFerromagneticEnergy.html  classComputeVertexHarmonicEnergy.html  classComputeVertexHarmonicSpinEnergy.html  classComputeVertexLimitEnergy.html  classComputeVertexLineTension.html  classComputeVertexSubstrateCylinderEnergy.html  classComputeVertexSubstrateEnergy.html  classComputeVertexSurfaceTension.html  classConstraintArea.html  classConstraintClass.html  classConstraintVolume.html  classDumperClass.html  classEvolverClass.html  classIntegratorBrownianMeshVertex.html  classIntegratorClass.html  classIntegratorVelocityVerletMeshVertex.html  classMeshOperations.html  classMinimizerClass.html  classMinimizerMeshFIRE.html  classMonteCarloIntegrator.html  classMonteCarloIntegratorFlipEdge.html  classMonteCarloIntegratorSpinVertex.html  classMonteCarloIntegratorSwapEdge.html  classMonteCarloIntegratorSwapVertex.html  classMonteCarloIntegratorVertex.html  classRNG.html  classReadMesh.html  classSystemClass.html  class_compute_force_class.html  class_compute_mesh.html  class_compute_vertex_bending_energy.html  class_compute_vertex_bending_g_k_energy.html  class_compute_vertex_bending_helfrich_energy.html  (+636 more)
docs/: Doxyfile  conf.py  contributors.rst  cppapi_tree.md  index.rst  installation.rst  quickstart.rst  references.bib
examples/: disclination.html  examples.html  minimization.html  periodic.html  quickstart.html  shell_buckling.html  tutorial.html
pymembrane/: __init__.py
pymembrane/cppmodule/: CMakeLists.txt  ToDo.md  __init__.py
pymembrane/cppmodule/src/: pybindexport.cpp  read_mesh.cpp  read_mesh.hpp
pymembrane/cppmodule/src/box/: box.hpp  pbc.hpp  pybind_export_box.hpp
pymembrane/cppmodule/src/compute/: computemesh.cpp  computemesh.hpp  pybind_export_compute.hpp
pymembrane/cppmodule/src/constraints/: constraintarea.cpp  constraintarea.hpp  constraintclass.hpp  constraintvolume.cpp  constraintvolume.hpp
pymembrane/cppmodule/src/dumper/: dumper.cpp  dumper.hpp  dumper_vis.cpp  pybind_export_dumper.hpp
pymembrane/cppmodule/src/evolver/: evolverclass.cpp  evolverclass.hpp  pybind_export_evolver.hpp
pymembrane/cppmodule/src/integrators/: integrator_brownian_vertex.cpp  integrator_brownian_vertex.hpp  integrator_verlet_vertex.cpp  integrator_verlet_vertex.hpp  integratorclass.hpp  montecarlointegrator.hpp  montercarlo_flip_edge.cpp  montercarlo_flip_edge.hpp  montercarlo_spin_vertex.cpp  montercarlo_spin_vertex.hpp  montercarlo_swap_edge.cpp  montercarlo_swap_edge.hpp  montercarlo_swap_vertex.cpp  montercarlo_swap_vertex.hpp  montercarlo_vertex.cpp  montercarlo_vertex.hpp
pymembrane/cppmodule/src/mesh/: computegeometry.hpp  edge_flip.hpp  halfedges.hpp  meshoperations.cpp  meshoperations.hpp  meshoperators.hpp  meshproperties.hpp  pybind_export_mesh.hpp
pymembrane/cppmodule/src/minimizer/: fire.cpp  fire.hpp  minimizerclass.hpp
pymembrane/cppmodule/src/potentials/: computeforceclass.hpp  potentialBending.cpp  potentialBending.hpp  potentialBendingHelfrich.cpp  potentialBendingHelfrich.hpp  potentialCauchyGreen.cpp  potentialCauchyGreen.hpp  potentialConstantAreaTriangle.cpp  potentialConstantAreaTriangle.hpp  potentialDihedralHarmonics.cpp  potentialDihedralHarmonics.hpp  potentialHarmonic.cpp  potentialHarmonic.hpp  potentialHarmonicDye.cpp  potentialHarmonicDye.hpp  potentialIsing.cpp  potentialIsing.hpp  potentialLimit.cpp  potentialLimit.hpp  potentialLineTension.cpp  potentialLineTension.hpp  potentialSubstrate.cpp  potentialSubstrate.hpp  potentialSubstrateCylinder.cpp  potentialSubstrateCylinder.hpp  potentialSurfaceTension.cpp  potentialSurfaceTension.hpp
pymembrane/cppmodule/src/rng/: rng.hpp
pymembrane/cppmodule/src/system/: pybind_export_system.hpp  systemclass.hpp  systemclassbox.cpp
pymembrane/cppmodule/src/types/: globaltypes.hpp  pybind_export_types.hpp  pymembvector.hpp
pymembrane/cppmodule/src/utils/: fromdicttovec.hpp  fromstring.hpp  tofile.hpp
pythonapi/: bending.html  bendingdihedral.html  bendingmean.html  box.html  cauchygreen.html  compute.html  constantarea.html  core.html  dihedral.html  dumper.html  evolver.html  fire.html  halfedge.html  harmonic.html  integrators.html  limit.html  linetension.html  mcedgeflip.html  mcedgeswap.html  mcintegrators.html  mcvertexmove.html  mcvertexswap.html  mdbrownian.html  mdintegrators.html  minintegrators.html  miscellaneous.html  potentials.html  pythonapi.html  readmesh.html  references.html  substrate.html  system.html  triangularmeshes.html
(+798 files in other folders)
